2008-06-08  Janus Weil  <janus@gcc.gnu.org>

PR fortran/36459
	* decl.c (match_procedure_decl): Correctly recognize if the interface
	is an intrinsic procedure.


2008-06-08  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/36459
	* gfortran.dg/proc_decl_16.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@136555 138bc75d-0d04-0410-961f-82ee72b054a4